force-app/main/default/objects/Scheduled_Service__c/Scheduled_Service__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED: This object has been replaced by Field Service (Work Orders and Service Appointments). Use ServiceAppointment for scheduling. Run migrateScheduledServices.apex to migrate existing data. Do not create new records in this object.</description>
    <label>Scheduled Service (Deprecated)</label>
    <nameField>
        <displayFormat>SVC-{000000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Services (Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>