force-app/main/default/objects/Scheduled_Service__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member assigned to this appointment</description>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Scheduled Services</relationshipLabel>
    <relationshipName>Scheduled_Services</relationshipName>
    <type>Lookup</type>
</CustomField>