force-app/main/default/objects/Scheduled_Service__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Parent Case for this scheduled service</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Scheduled Services</relationshipLabel>
    <relationshipName>Scheduled_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>