force-app/main/default/objects/Scheduled_Service__c/fields/Confirmation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Sent_Date__c</fullName>
    <description>When the confirmation reminder was sent</description>
    <label>Confirmation Sent Date</label>
    <type>DateTime</type>
</CustomField>