force-app/main/default/objects/Scheduled_Service__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date by which this appointment must be completed</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>