force-app/main/default/objects/Scheduled_Service__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Duration of the appointment in minutes</description>
    <label>Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>