force-app/main/default/objects/Scheduled_Service__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <description>Address for community meetings</description>
    <label>Location Address</label>
    <type>TextArea</type>
</CustomField>