force-app/main/default/objects/Scheduled_Service__c/fields/Original_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Original_Scheduled_Start__c</fullName>
    <description>Original start time before any reschedules</description>
    <label>Original Scheduled Start</label>
    <type>DateTime</type>
</CustomField>