force-app/main/default/objects/Scheduled_Service__c/fields/Peer_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Peer_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Peer has acknowledged the appointment</description>
    <label>Peer Confirmed</label>
    <type>Checkbox</type>
</CustomField>