force-app/main/default/objects/Scheduled_Service__c/fields/Reschedule_Count__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this appointment has been rescheduled</description>
    <label>Reschedule Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>