force-app/main/default/objects/Scheduled_Service__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <description>Appointment end date and time</description>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>