force-app/main/default/objects/Scheduled_Service__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <description>Appointment start date and time</description>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>