force-app/main/default/objects/Scheduled_Service__c/fields/Service_Note_Created__c.field-meta.xml
<CustomField>
    <fullName>Service_Note_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A service note has been linked to this appointment</description>
    <label>Service Note Created</label>
    <type>Checkbox</type>
</CustomField>