force-app/main/default/objects/Scheduled_Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Type of appointment</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial IRP</fullName>
            </value>
            <value>
                <fullName>Follow-up IRP</fullName>
            </value>
            <value>
                <fullName>Weekly Meeting</fullName>
                <default>true</default>
                <label>Weekly Meeting</label>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>