force-app/main/default/objects/Scheduled_Service__c/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <description>Test field to verify deployment</description>
    <label>Test Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>